--- a/src/main/resources/templates/infopage/home.html
+++ b/src/main/resources/templates/infopage/home.html
@@ -5,110 +5,8 @@
     <meta charset="UTF-8" />
     <title>Sistema Help Desk ::: Home</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="materialize/css/materialize.home.css" media="screen,projection" />
 
-    <style>
-        body {
-            background-color: #f0f8ff;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            margin: 0;
-        }
-
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 20px;
-            background-color: #f8f9fa;
-            border-bottom: 1px solid #dee2e6;
-        }
-
-        .header img {
-            height: 50px;
-        }
-
-        .header .nav-buttons a,
-        .header .nav-buttons button {
-            color: #fff;
-            background-color: #007bff;
-            border-color: #007bff;
-        }
-
-        .header .nav-buttons a:hover,
-        .header .nav-buttons button:hover {
-            color: #fff;
-            background-color: #0356af;
-            border-color: #0356af;
-        }
-
-        main {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-
-        .jumbotron {
-            background-color: #ffffff;
-            padding: 9rem 1rem;
-            text-align: center;
-        }
-
-        .jumbotron .container {
-            max-width: 900px;
-            margin: auto;
-        }
-
-        .album {
-            padding: 2rem 0;
-            background-color: #f8f9fa;
-        }
-
-        .card {
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .footer {
-            padding: 1rem 0;
-            text-align: center;
-            background-color: #f8f9fa;
-            border-top: 1px solid #dee2e6;
-        }
-
-        .highlight-text {
-            color: #007bff;
-            font-weight: bold;
-        }
-
-        .card-body {
-            text-align: justify;
-            padding: 1rem;
-        }
-
-        .card-title {
-            font-size: 1.25rem;
-            font-weight: bold;
-            margin-bottom: 0.5rem;
-        }
-
-        .card-text {
-            font-size: 1rem;
-            margin-bottom: 1rem;
-        }
-
-        .btn-outline-secondary {
-            color: #fff;
-            background-color: #007bff;
-            border-color: #007bff;
-        }
-
-        .btn-outline-secondary:hover {
-            color: #fff;
-            background-color: #0356af;
-            border-color: #0356af;
-        }
-    </style>
 </head>
 
 <body>
