--- a/src/main/resources/templates/index/principal.html
+++ b/src/main/resources/templates/index/principal.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Document</title>
+<title>Principal</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link type="text/css" rel="stylesheet" href="materialize/css/materialize.principal.css" media="screen,projection" />
+
 </head>
 <body>
 
@@ -28,17 +30,27 @@
     <div class="separetor">
         <p>CORE</p>
     </div>
-    <a href="#" class="menu-item">Dashboard</a>
-    <div class="separetor">
-        <p>INTERFACE</p>
-    </div>
-    <label for="submenu-checkbox" class="menu-item" style="display: contents;">Gerenciamento <i class="fas fa-chevron-right"></i></label>
-    <input type="checkbox" id="submenu-checkbox" class="submenu-checkbox">
-    <div class="submenu" id="submenu">
-        <a href="#" class="submenu-item">Cadastro de Chamados</a>
-        <a href="#" class="submenu-item">Consultar Chamados</a>
-    </div>
-    <a href="#" class="menu-item">Menu Item 3</a>
+    <ul class="list-unstyled components">
+        <li class="active">
+            <a href="#" class="menu-item"><i class="fa-solid fa-chart-line" style="margin-right: 10px;"></i> Dashboard</a>
+            <div class="separetor">
+                <p>INTERFACE</p>
+            </div>
+            <a href="#" class="menu-item" data-toggle="collapse" aria-expanded="false" id="dropdown-toggle">
+                <i class="fa-solid fa-clipboard-list" style="margin-right: 10px;"></i> Chamados
+                <i class="fa-solid fa-chevron-down" style="margin-left: auto;"></i>
+            </a>
+            <ul class="collapse list-unstyled" id="itemSubmenu">
+                <li>
+                    <a href="#" class="menu-item-sub"><i class="fa-solid fa-clipboard-list" style="margin-right: 10px;"></i> Novo Chamado</a>
+                </li>
+                <li>
+                    <a href="#" class="menu-item-sub"><i class="fa-solid fa-clipboard-list" style="margin-right: 10px;"></i> Consultar Chamado</a>
+                </li>
+            </ul>
+            <a href="#" class="menu-item"><i class="fa-solid fa-chart-line" style="margin-right: 10px;"></i> Colaboradores</a>
+        </li>
+    </ul>
 </div>
 
 <div class="content">
@@ -47,14 +59,18 @@
 </div>
 
 <script>
-    document.getElementById('submenu-checkbox').addEventListener('change', function() {
-        var submenu = document.getElementById('submenu');
-        if (this.checked) {
-            submenu.style.display = 'block';
+document.addEventListener("DOMContentLoaded", function() {
+    const dropdownToggle = document.getElementById("dropdown-toggle");
+    const itemSubmenu = document.getElementById("itemSubmenu");
+
+    dropdownToggle.addEventListener("click", function() {
+        if (itemSubmenu.classList.contains("show")) {
+            itemSubmenu.classList.remove("show");
         } else {
-            submenu.style.display = 'none';
+            itemSubmenu.classList.add("show");
         }
     });
+});
 </script>
 
 </body>
