add tipo de chamado ti,financeiro,juridico

--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -157,7 +157,7 @@
                             <div class="card bg-danger text-white mb-4">
                                 <div class="card-body" style="font-size: 35px; text-align: center;">10</div>
                                 <p class="card-text" style="text-align: center; margin-left: 10px; font-size: 15px;">
-                                    <strong>TICKET PEDENTES</strong></p>
+                                    <strong>TICKET AGUARDANDO INFO ADD</strong></p>
                                 <div class="card-footer d-flex align-items-center justify-content-between">
                                     <a class="small text-white stretched-link" href="#">Ver Detalhes</a>
                                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
