atualização de relacionamento da tabela tipoChamado

--- a/src/main/resources/templates/ticket/cadastrarChamado.html
+++ b/src/main/resources/templates/ticket/cadastrarChamado.html
@@ -112,6 +112,10 @@
                                 <label for="descricao">Descrição:</label>
                                 <textarea class="form-control" id="descricao" name="descricao" rows="3" required></textarea>
                             </div>
+                            <div class="form-group">
+                                <label for="supervisor">supervisor:</label>
+                                <textarea class="form-control" id="supervisor" name="supervisor"  required></textarea>
+                            </div>
                             <button type="submit" class="btn btn-primary">Salvar</button>
                             
                         </form>
