--- a/src/main/resources/templates/ticket/cadastrarChamado.html
+++ b/src/main/resources/templates/ticket/cadastrarChamado.html
@@ -116,6 +116,15 @@
                                 <label for="supervisor">supervisor:</label>
                                 <textarea class="form-control" id="supervisor" name="supervisor"  required></textarea>
                             </div>
+                            <div class="form-group">
+                                <label for="tipoChamado">Tipo de Chamado:</label>
+                                <select class="form-control" id="tipoChamado" name="tipoChamado" required>
+                                    <option value="1">INFORMATICA</option>
+                                    <option value="2">JURIDICO</option>
+                                    <option value="3">FINANCEIRO</option>
+                                </select>
+                            </div>
+                            
                             <button type="submit" class="btn btn-primary">Salvar</button>
                             
                         </form>
